deployments/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud
    component: webserver
  name: nextcloud
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
    component: webserver
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud
    component: database
  name: database
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
    component: database
  ports:
  - name: http
    port: 3306
    protocol: TCP
    targetPort: 3306
  type: ClusterIP
